--- a/src/ApiGateways/YarpApiGateway/appsettings.Local.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.Local.json
@@ -35,21 +35,21 @@
       "catalog-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:6000/api/v1/catalog"
+            "Address": "https://localhost:6060/api/v1/catalog"
           }
         }
       },
       "basket-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:6001/api/v1/basket"
+            "Address": "https://localhost:6061/api/v1/basket"
           }
         }
       },
       "ordering-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:6003/api/v1/ordering"
+            "Address": "https://localhost:6063/api/v1/ordering"
           }
         }
       }
