--- a/src/BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj
+++ b/src/BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj
@@ -13,7 +13,22 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />    
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
+<!--    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />-->
+<!--    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />-->
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+<!--    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />-->
+<!--    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />-->
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
+<!--    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />-->
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="6.0.0" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="6.0.0" />
+    <PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
