--- a/src/Services/Identity/Identity.Infrastructure/Identity.Infrastructure.csproj
+++ b/src/Services/Identity/Identity.Infrastructure/Identity.Infrastructure.csproj
@@ -15,11 +15,12 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+<!--        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />-->
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
         <PackageReference Include="OpenIddict" Version="6.0.0" />
         <PackageReference Include="OpenIddict.Abstractions" Version="6.0.0" />
         <PackageReference Include="OpenIddict.Core" Version="6.0.0" />
